# MOO

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
scripts/: optimal_parameter_verify.py
src/base/: block_sparsity.h  fixed_vector.h  log.cpp  log.h  trajectory.cpp  trajectory.h  util.h
src/interfaces/c/: problem.cpp  problem.h
src/interfaces/gdopt/: generated.c  main_gdopt.cpp
src/nlp/instances/gdop/: gdop.cpp  orchestrator.cpp  problem.h  strategies.cpp  strategies.h
src/nlp/solvers/ipopt/: solver.cpp
src/runner/: entry.cpp  generated.c  generated.h
src/simulation/integrator/: builder.h  integrator.cpp  integrator.h  integrator_util.h
src/simulation/radau/: radau_builder.cpp  radau_integrator.cpp  radau_integrator.h  test.cpp
